# Sentiment-Voice-of-Customer-VoC-Analytics-Platform

./: .env  README.md  requirements.txt
data_ingestion_service/: .gitignore  main.py  pyproject.toml  requirements.txt
data_ingestion_service/DIS_logs/: dis_logs
data_ingestion_service/agent/: ingestion_agent.py
data_ingestion_service/middleware/: log_middleware.py
data_ingestion_service/notebooks/: t1.py
data_ingestion_service/router/: data_ingestion.py  ingestion_helper.py
data_ingestion_service/schemas/: common_output_parser.py  (+1 more)
data_source_service/: .env  .gitignore  demo.py  main.py  pyproject.toml
notebooks/: test.ipynb
sentiment_agent/: .env.example  .gitignore  main.py  pyproject.toml
sentiment_agent/agent/: sentiment_analytic_agent.py
sentiment_agent/agent/clients/: client.py
sentiment_agent/agent/prompts/: prompt.py  test_prompt
sentiment_agent/config/: config.dev.yaml
sentiment_agent/logs/SA_logs/: sa_logs
sentiment_agent/router/: sentiment_agent_router.py
sentiment_agent/schemas/: sentiment_parser.py  sentiment_schema.py
sentiment_agent/src/agent/: sentiment_analytic_agent.py
sentiment_agent/src/agent/clients/: client.py
sentiment_agent/src/agent/prompts/: prompt.py
sentiment_agent/src/middleware/: log_middleware.py
sentiment_agent/src/router/: sentiment_agent_router.py
sentiment_agent/src/schemas/: sentiment_parser.py  sentiment_schema.py
sentiment_agent/src/utils/: __init__.py  exception_config.py  logger_config.py  project_config.py
sentiment_agent/utils/: exception_config.py  logger_config.py
(+50 files in other folders)
