[project]
name = "sentiment-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blingfire>=0.1.8",
    "deep-translator>=1.11.4",
    "fastapi>=0.127.0",
    "googletrans>=4.0.2",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "nltk>=3.9.2",
    "pycld2>=0.42",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "spacy>=3.8.11",
    "uvicorn>=0.40.0",
]
